--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     </head>
     <body>
         <header>
-
+            <nav>
+                <ul>
+                   <li> <a href="/"><p>Web</p><p>Studio</p></a></li>
+                   <li><a href="/">Studio</a></li>
+                   <li><a href="/">Portfolio</a></li>
+                   <li><a href="/">Contacts</a></li>
+                </ul>                
+            </nav>  
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+            </ul>         
         </header>
         <main>
             <h1>Effective Solutions for Your Business</h1>
