--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header>
             <nav>
                 <ul>
-                   <li> <a href="/"><p>Web</p><p>Studio</p></a></li>
+                   <li> <a href="/">WebStudio</a></li>
                    <li><a href="/">Studio</a></li>
                    <li><a href="/">Portfolio</a></li>
                    <li><a href="/">Contacts</a></li>
@@ -46,6 +46,10 @@
                        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                    </li>
                  </ul>
+            </div>
+
+            <div>
+                
             </div>
 
 
