--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             </ul>         
         </header>
         <main>
-            <div>
+            <section>
                 <h1>Effective Solutions for Your Business</h1>
                 <button type="button">Order Service</button>
-            </div>
+            </section>
 
 
-            <div>
+            <section>
                  <ul>
                    <li>
                        <h2>Strategy</h2>
@@ -46,11 +46,11 @@
                        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                    </li>
                  </ul>
-            </div>
+            </section>
 
-            <div>
+            <section>
                 
-            </div>
+            </section>
 
 
            
