--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <header>
             <nav>
                 <ul>
-                   <li> <a href="/">WebStudio</a></li>
-                   <li><a href="/">Studio</a></li>
-                   <li><a href="/">Portfolio</a></li>
-                   <li><a href="/">Contacts</a></li>
+                   <li> <a href="#">WebStudio</a></li>
+                   <li><a href="#">Studio</a></li>
+                   <li><a href="#">Portfolio</a></li>
+                   <li><a href="#">Contacts</a></li>
                 </ul>                
             </nav>  
             <ul>
@@ -78,7 +78,8 @@
            
         </main>
         <footer>
-            
+            <a href="#">WebStudio</a>
+            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
 
     </body>
