--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <header>
             <nav>
+                <a href="./index.html">WebStudio</a>
                 <ul>
-                   <li> <a href="#">WebStudio</a></li>
                    <li><a href="#">Studio</a></li>
                    <li><a href="#">Portfolio</a></li>
                    <li><a href="#">Contacts</a></li>
@@ -17,7 +17,7 @@
             </nav>  
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+                <li><a href="tel:+11(000)111311-11">+11 (000) 111-11-11</a></li>
             </ul>         
         </header>
         <main>
@@ -28,21 +28,22 @@
 
 
             <section>
+                <h2>benefits</h2>
                  <ul>
                    <li>
-                       <h2>Strategy</h2>
+                       <h3>Strategy</h3>
                        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                    </li>
                    <li>
-                       <h2>Punctuality</h2>
+                       <h3>Punctuality</h3>
                        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                    </li>
                    <li>
-                       <h2>Diligence</h2>
-                       <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                       <h3>Diligence</h3>
+                       <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                    </li>
                    <li>
-                       <h2>Technologies</h2>
+                       <h3>Technologies</h3>
                        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                    </li>
                  </ul>
@@ -78,7 +79,7 @@
            
         </main>
         <footer>
-            <a href="#">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
 
